--- a/presto/templates/settings.twig
+++ b/presto/templates/settings.twig
@@ -1,8 +1,8 @@
 {% import '_includes/forms' as forms %}
 
 {{ forms.textField({
-	label: 'Cache Location',
-	instructions: 'Relative path to the cache directory from the public root.',
+	label: 'Cache Location'|t,
+	instructions: 'Relative path to the cache directory from the public root.'|t,
 	name: 'cachePath',
 	value: settings.cachePath
 }) }}
