Update “purge cache” instructions to mention need to first clear Craft cache

--- a/presto/templates/settings.twig
+++ b/presto/templates/settings.twig
@@ -12,7 +12,7 @@
         <div class="heading">
             <label>Purge Cache</label>
             <div class="instructions">
-                Schedule purging of Presto static cache
+                Schedule purging of Presto static cache. Be sure you first clear the main Craft cache to regenerate template caches.
             </div>
         </div>
         <a class="btn submit" href="{{ url('settings/plugins/presto/purge') }}">Purge Cache</a>
