Update presto settings templates

--- a/presto/templates/settings.twig
+++ b/presto/templates/settings.twig
@@ -1,20 +1,1 @@
-{% import '_includes/forms' as forms %}
-
-{{ forms.textField({
-	label: 'Cache Location'|t,
-	instructions: 'Relative path to the cache directory from the public root.'|t,
-	name: 'cachePath',
-	value: settings.cachePath
-}) }}
-
-{% if craft.config.get('purgeMethod', 'presto') == 'cron' %}
-    <div class="field">
-        <div class="heading">
-            <label>Purge Cache</label>
-            <div class="instructions">
-                Schedule purging of Presto static cache. Be sure you first clear the main Craft cache to regenerate template caches.
-            </div>
-        </div>
-        <a class="btn submit" href="{{ url('settings/plugins/presto/purge') }}">Purge Cache</a>
-    </div>
-{% endif %}
+{% redirect 'presto' %}
