Add ability to remove cache items individually

--- a/src/templates/_layouts/master.twig
+++ b/src/templates/_layouts/master.twig
@@ -2,6 +2,8 @@
 
 {% set title = 'Presto'|t('presto') %}
 
+{% do view.registerAssetBundle('lewiscom\\presto\\assetbundles\\presto\\PrestoAsset') %}
+
 {% set nav = {
     general: { heading: 'General'|t('presto') },
     cachedPages: { title: 'Cached Pages'|t('presto') },
