--- a/src/templates/_layouts/master.twig
+++ b/src/templates/_layouts/master.twig
@@ -6,7 +6,7 @@
 
 {% set nav = {
     general: { heading: 'General'|t('presto') },
-    cachedPages: { title: 'Cached Pages'|t('presto') },
+    cache: { title: 'Cache'|t('presto') },
     settingsHeader: { heading: 'Settings'|t('presto') },
     'settings/general': { title: 'General'|t('presto') },
     'settings/cache-warming': { title: 'Cache Warming'|t('presto') },
