--- a/src/templates/cache.twig
+++ b/src/templates/cache.twig
@@ -10,35 +10,39 @@
 ] %}
 
 {% block content %}
-    {% if cachedPages|length %}
+    {% if cache|length %}
         <form method="POST" class="js-presto-purge-selected">
             <input type="hidden" name="action" value="presto/cached-pages/purge-selected">
             <input type="hidden" name="pluginHandle" value="presto">
 
-            {{ redirectInput('presto/cachedPages') }}
+            {{ redirectInput('presto/cache') }}
             {{ csrfInput() }}
 
             <div class="buttons">
                 <input type="submit" class="btn submit js-presto-purge-submit disabled" value="Purge Selected" disabled="disabled">
+                <div class="flex-grow texticon search icon clearable">
+                    <input class="text fullwidth" type="text" autocomplete="off" placeholder="Search">
+                    <div class="clear hidden" title="Clear"></div>
+                </div>
             </div>
             <div class="tableview">
                 <table class="data fullwidth">
                     <thead>
-                    <tr>
-                        <td class="checkbox-cell">
-                            {{ forms.checkboxField({
-                                class: 'js-presto-cache-key-checkbox-all',
-                                checked: false,
-                            }) }}
-                        </td>
-                        {% for header in headers %}
-                            <th scope="col">{{ header }}</th>
-                        {% endfor %}
-                        <th scope="col" data-attribute="link" data-icon="world" title="Link"></th>
-                    </tr>
+                        <tr>
+                            <td class="checkbox-cell">
+                                {{ forms.checkboxField({
+                                    class: 'js-presto-cache-key-checkbox-all',
+                                    checked: false,
+                                }) }}
+                            </td>
+                            {% for header in headers %}
+                                <th scope="col">{{ header }}</th>
+                            {% endfor %}
+                            <th scope="col" data-attribute="link" data-icon="world" title="Link"></th>
+                        </tr>
                     </thead>
                     <tbody>
-                    {% for page in cachedPages %}
+                    {% for page in cache %}
                         <tr data-id="{{ page.id }}">
                             <td class="checkbox-cell">
                                 {{ forms.checkboxField({
@@ -51,7 +55,7 @@
                             </td>
                             <td data-title="" data-attr="section">{{ page.siteId }}</td>
                             <td data-title="" data-attr="">{{ page.url }}</td>
-                            <td data-title="" data-attr="">{{ page.group }}</td>
+                            <td data-title="" data-attr="">{{ page.cacheGroup }}</td>
                             <td data-title="" data-attr="">{{ page.age }}</td>
                             <td data-title="" data-attr="">{{ page.dateCreated }}</td>
                             <td data-title="Link" data-attr="link">
