--- a/src/templates/cache.twig
+++ b/src/templates/cache.twig
@@ -21,9 +21,10 @@
             <div class="buttons">
                 <input type="submit" class="btn submit js-presto-purge-submit disabled" value="Purge Selected" disabled="disabled">
                 <div class="flex-grow texticon search icon clearable">
-                    <input class="text fullwidth" type="text" autocomplete="off" placeholder="Search">
+                    <input class="text fullwidth js-presto-search-input" type="text" autocomplete="off" placeholder="Search">
                     <div class="clear hidden" title="Clear"></div>
                 </div>
+                <a href="#" class="btn submit js-presto-search-submit">Search</a>
             </div>
             <div class="tableview">
                 <table class="data fullwidth">
