--- a/src/templates/cache.twig
+++ b/src/templates/cache.twig
@@ -10,37 +10,37 @@
 ] %}
 
 {% block content %}
-    {% if cache|length %}
-        <form method="POST" class="js-presto-purge-selected">
-            <input type="hidden" name="action" value="presto/cached-pages/purge-selected">
-            <input type="hidden" name="pluginHandle" value="presto">
+    <form method="POST" class="js-presto-purge-selected">
+        <input type="hidden" name="action" value="presto/cached-pages/purge-selected">
+        <input type="hidden" name="pluginHandle" value="presto">
 
-            {{ redirectInput('presto/cache') }}
-            {{ csrfInput() }}
+        {{ redirectInput('presto/cache') }}
+        {{ csrfInput() }}
 
-            <div class="buttons">
-                <input type="submit" class="btn submit js-presto-purge-submit disabled" value="Purge Selected" disabled="disabled">
-                <div class="flex-grow texticon search icon clearable">
-                    <input class="text fullwidth js-presto-search-input" type="text" autocomplete="off" placeholder="Search">
-                    <div class="clear hidden" title="Clear"></div>
-                </div>
-                <a href="#" class="btn submit js-presto-search-submit">Search</a>
+        <div class="buttons">
+            <input type="submit" class="btn submit js-presto-purge-submit disabled" value="Purge Selected" disabled="disabled">
+            <div class="flex-grow texticon search icon clearable">
+                <input class="text fullwidth js-presto-search-input" type="text" autocomplete="off" placeholder="Search" value="{% if search %} {{ search }}{% endif %}">
+                <div class="clear hidden" title="Clear"></div>
             </div>
+            <a href="#" class="btn submit js-presto-search-submit">Search</a>
+        </div>
+        {% if cache|length %}
             <div class="tableview">
                 <table class="data fullwidth">
                     <thead>
-                        <tr>
-                            <td class="checkbox-cell">
-                                {{ forms.checkboxField({
-                                    class: 'js-presto-cache-key-checkbox-all',
-                                    checked: false,
-                                }) }}
-                            </td>
-                            {% for header in headers %}
-                                <th scope="col">{{ header }}</th>
-                            {% endfor %}
-                            <th scope="col" data-attribute="link" data-icon="world" title="Link"></th>
-                        </tr>
+                    <tr>
+                        <td class="checkbox-cell">
+                            {{ forms.checkboxField({
+                                class: 'js-presto-cache-key-checkbox-all',
+                                checked: false,
+                            }) }}
+                        </td>
+                        {% for header in headers %}
+                            <th scope="col">{{ header }}</th>
+                        {% endfor %}
+                        <th scope="col" data-attribute="link" data-icon="world" title="Link"></th>
+                    </tr>
                     </thead>
                     <tbody>
                     {% for page in cache %}
@@ -67,12 +67,11 @@
                     </tbody>
                 </table>
             </div>
-        </form>
-    {% else %}
-        <h1>No cached pages</h1>
-    {% endif %}
-
-    {% include 'presto/_includes/pagination' with { paginate: paginate } %}
+            {% include 'presto/_includes/pagination' with { paginate: paginate } %}
+        {% else %}
+            <h1>No cached pages</h1>
+        {% endif %}
+    </form>
 {% endblock %}
 
 
